load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
  name = "cpp-hocon",
  srcs = glob(["src/*.cc", "src/nodes/*.cc", "src/values/*.cc",
               "inc/internal/*.hpp", "inc/internal/nodes/*.hpp", "inc/internal/values/*.hpp"]),
  hdrs = glob(["inc/hocon/*.hpp", "inc/hocon/parser/*.hpp"]),
  deps = ["//external:leatherman",
          "//external:boost"],
  includes = ["inc"],
  visibility = ["//visibility:public"]
)
