load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
  name = "cpp-hocon",
  srcs = glob(["src/*.cc", "src/nodes/*.cc", "src/values/*.cc",
               "inc/internal/*.hpp", "inc/internal/nodes/*.hpp", "inc/internal/values/*.hpp"]),
  hdrs = glob(["inc/hocon/*.hpp", "inc/hocon/parser/*.hpp"]),
  copts = ["-pthread", "-std=c++2a"],
  deps = ["@com_github_fmtlib_fmt//:fmtlib",
          "@com_github_puppetlabs_leatherman//:leatherman",

          "@boost//:locale",
          "@boost//:regex",

          "@boost//:thread",
          "@boost//:date_time",
          "@boost//:chrono",
          "@boost//:filesystem",
          "@boost//:system",
          "@boost//:program_options",
          "@boost//:variant",
  ],
  includes = ["inc"],
  visibility = ["//visibility:public"]
)
